# learning-c-and-cmake

./: CMakeLists.txt  MyLibrary.c  README.md
libs/MyLib/: CMakeLists.txt
libs/MyLib/include/: MyLibrary.h
src/: main.c
